cmake_minimum_required(VERSION 3.10)

make_library(sim .)
target_include_directories(sim PUBLIC ${Boost_INCLUDE_DIR})
target_link_libraries(sim PUBLIC "Qt6::Core;${Boost_LIBRARIES};bits")
target_compile_definitions(sim PRIVATE SIM_LIBRARY)

if(NOT IOS)
  make_qtest(test-sim-device-dense test/device/dense.cpp "sim;Qt6::Core;${Boost_LIBRARIES};Qt6::Test")
  make_qtest(test-sim-device-pubsub test/device/pubsub.cpp "sim;Qt6::Core;${Boost_LIBRARIES};Qt6::Test")
  make_qtest(test-sim-device-mmi test/device/mmi.cpp "sim;Qt6::Core;${Boost_LIBRARIES};Qt6::Test")
  make_qtest(test-sim-device-mmo test/device/mmo.cpp "sim;Qt6::Core;${Boost_LIBRARIES};Qt6::Test")
  make_qtest(test-sim-device-simple-bus test/device/simple_bus.cpp "sim;Qt6::Core;${Boost_LIBRARIES};Qt6::Test")
  set_target_properties(test-sim-device-simple-bus PROPERTIES FOLDER "qtc_runnable")
endif()
