cmake_minimum_required(VERSION 3.10)

include(../../../config/cmake/create_targets.cmake)

make_library(pas pas)
target_link_libraries(pas PUBLIC "Qt6::Core;symbol;macro")
target_include_directories(pas PUBLIC ${Boost_INCLUDE_DIR})

if(NOT IOS)
  make_qtest(test-pas-bits-copy test/bits/copy.test.cpp "pas;Qt6::Core;Qt6::Test")
  make_qtest(test-pas-parse-pepp-values- test/parse/pepp/parser_values.test.cpp "pas;Qt6::Core;Qt6::Test")
  make_qtest(test-pas-parse-pepp-lines test/parse/pepp/parser_lines.test.cpp "pas;Qt6::Core;Qt6::Test")
  make_qtest(test-pas-parse-pepp-afpt test/parse/pepp/arg_from_parse_tree.test.cpp "pas;Qt6::Core;Qt6::Test")
  make_qtest(test-pas-parse-pepp-nfpt-pass test/parse/pepp/node_from_parse_tree/pass.test.cpp "pas;Qt6::Core;Qt6::Test")
  make_qtest(test-pas-parse-pepp-nfpt-error test/parse/pepp/node_from_parse_tree/error.test.cpp "pas;Qt6::Core;Qt6::Test")
  make_qtest(test-pas-ops-pepp-inc-macro test/operations/pepp/include_macros.test.cpp "pas;Qt6::Core;Qt6::Test")
  make_qtest(test-pas-ops-pepp-flatten-macro test/operations/pepp/flatten.test.cpp "pas;Qt6::Core;Qt6::Test")
  make_qtest(test-pas-ops-pepp-link-globals test/operations/pepp/link_globals.test.cpp "pas;Qt6::Core;Qt6::Test")
  make_qtest(test-pas-ops-pepp-size test/operations/pepp/size.test.cpp "pas;Qt6::Core;Qt6::Test")
  make_qtest(test-pas-ops-pepp-assign-addr test/operations/pepp/assign_addr.test.cpp "pas;Qt6::Core;Qt6::Test")
  make_qtest(test-pas-ops-pepp-assign-addr-burn test/operations/pepp/assign_addr_burn.test.cpp "pas;Qt6::Core;Qt6::Test")
  make_qtest(test-pas-ops-pepp-register-scall test/operations/pepp/register_system_calls.test.cpp "pas;Qt6::Core;Qt6::Test")
  #make_qtest(test-pas-ops-pepp-fmt-source test/operations/pepp/register_system_calls.test.cpp "pas;Qt6::Core;Qt6::Test")
  make_qtest(test-pas-ops-pepp-to-bytes test/operations/pepp/to_bytes.test.cpp "pas;Qt6::Core;Qt6::Test")
  make_qtest(test-pas-ops-pepp-fmt-listing test/operations/pepp/listing.test.cpp "pas;Qt6::Core;Qt6::Test")
  #make_qtest(test-pat-pep-from-tree-comment test/pep/ast/visitor/from_parse_tree/comment.test.cpp "pas;Qt6::Core;Qt6::Test")
  #make_qtest(test-pat-pep-arg-from-parse-tree test/pep/ast/visitor/arg_from_parse_tree.test.cpp "pas;Qt6::Core;Qt6::Test")
  set_target_properties(test-pas-ops-pepp-assign-addr-burn PROPERTIES FOLDER "qtc_runnable")
endif()
