make_library(pas pas)
target_link_libraries(pas PUBLIC "Qt6::Core;bits;symbol;macro;elfio;isa;obj")
target_include_directories(pas PUBLIC ${Boost_INCLUDE_DIR})
target_compile_definitions(pas PRIVATE PAS_LIBRARY)

if(NOT IOS)
  make_qtest(test-pas-parse-pepp-values- test/parse/pepp/parser_values.cpp "pas;Qt6::Core;Qt6::Test")
  make_qtest(test-pas-parse-pepp-lines test/parse/pepp/parser_lines.cpp "pas;Qt6::Core;Qt6::Test")
  make_qtest(test-pas-parse-pepp-afpt test/parse/pepp/arg_from_parse_tree.cpp "pas;Qt6::Core;Qt6::Test")
  make_qtest(test-pas-parse-pepp-nfpt-pass test/parse/pepp/node_from_parse_tree/pass.cpp "pas;Qt6::Core;Qt6::Test")
  make_qtest(test-pas-parse-pepp-nfpt-error test/parse/pepp/node_from_parse_tree/error.cpp "pas;Qt6::Core;Qt6::Test")
  make_qtest(test-pas-ops-pepp-addressable test/operations/pepp/addressable.cpp "pas;Qt6::Core;Qt6::Test")
  make_qtest(test-pas-ops-pepp-inc-macro test/operations/pepp/include_macros.cpp "pas;Qt6::Core;Qt6::Test")
  make_qtest(test-pas-ops-pepp-flatten-macro test/operations/pepp/flatten.cpp "pas;Qt6::Core;Qt6::Test")
  make_qtest(test-pas-ops-pepp-link-globals test/operations/pepp/link_globals.cpp "pas;Qt6::Core;Qt6::Test")
  make_qtest(test-pas-ops-pepp-size test/operations/pepp/size.cpp "pas;Qt6::Core;Qt6::Test")
  make_qtest(test-pas-ops-pepp-assign-addr test/operations/pepp/assign_addr.cpp "pas;Qt6::Core;Qt6::Test")
  #make_qtest(test-pas-ops-pepp-assign-addr-burn test/operations/pepp/assign_addr_burn.cpp "pas;Qt6::Core;Qt6::Test")
  make_qtest(test-pas-ops-pepp-register-scall test/operations/pepp/register_system_calls.cpp "pas;Qt6::Core;Qt6::Test")
  make_qtest(test-pas-ops-pepp-wps test/operations/pepp/whole_program_sanity.cpp "pas;Qt6::Core;Qt6::Test")
  make_qtest(test-pas-ops-pepp-to-bytes test/operations/pepp/to_bytes.cpp "pas;Qt6::Core;Qt6::Test")
  make_qtest(test-pas-ops-pepp-fmt-listing test/operations/pepp/listing.cpp "pas;Qt6::Core;Qt6::Test")
  make_qtest(test-pas-e2e-pep10 test/e2e/pep10.cpp "pas;Qt6::Core;Qt6::Test;builtins;targets")
  set_target_properties(test-pas-ops-pepp-addressable  PROPERTIES FOLDER "qtc_runnable")
endif()
